apiserver: Add a ServiceNetwork resource for Skupper sites.
* this adds a new /api/events endpoint which can be used for all types of resources
* add online tracking for sites
* NexodusClaims key’s are a bit more abstract, using agent_id for represent device or site ids.
